refactor: matualizações nas classes service