@@ -9,18 +9,17 @@ import com.solutis.locadoraVeiculos.repository.AluguelRepository;
 import com.solutis.locadoraVeiculos.repository.ApoliceSeguroRepository;
 import com.solutis.locadoraVeiculos.repository.CarroRepository;
 import com.solutis.locadoraVeiculos.repository.MotoristaRepository;
-import com.solutis.locadoraVeiculos.mapper.DozerMapper;
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
-import java.util.List;
+import java.util.*;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 
 @Service
 public class AluguelService {
-
     @Autowired
     private AluguelRepository aluguelRepository;
 
@@ -37,7 +36,8 @@ public class AluguelService {
 
     public LerAluguelDto criarAluguel(CriarAluguelDto criarAluguelDTO) {
 
-        Aluguel aluguelCriado = DozerMapper.parseObject(criarAluguelDTO, Aluguel.class);
+        Aluguel aluguelCriado = new Aluguel();
+        BeanUtils.copyProperties(criarAluguelDTO, aluguelCriado, "dataPedido", "motorista_id", "apolicesSeguro_id", "carros_id");
         aluguelCriado.setDataPedido(LocalDate.now());
 
         aluguelCriado.setMotorista(motoristaRepository.findById(criarAluguelDTO.getMotorista_id())
@@ -50,43 +50,54 @@ public class AluguelService {
                 .getCarros_id()
                 .stream()
                 .map(idCarro -> {
-                    var carro = carroRepository.findById(idCarro)
-                            .orElseThrow(ResourceNotFoundException::new);
-                    return carro;
-                }).collect(Collectors.toList());
+                        var carro = carroRepository.findById(idCarro)
+                                .orElseThrow(ResourceNotFoundException::new);
+                        return carro;
+                }).toList();
         aluguelCriado.setCarros(listaCarro);
 
+        LerAluguelDto lerAluguelDto = new LerAluguelDto();
         aluguelCriado = aluguelRepository.save(aluguelCriado);
-
-        LerAluguelDto lerAluguelDto = DozerMapper.parseObject(aluguelCriado, LerAluguelDto.class);
+        BeanUtils.copyProperties(aluguelCriado, lerAluguelDto);
         return lerAluguelDto;
+
     }
 
-    public LerAluguelDto retornarAlugueisById(Long id) {
+    public LerAluguelDto retornarAlugueisById (Long id) {
 
         logger.info("Finding one rent!");
 
-        Aluguel aluguel = aluguelRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Nenhum registro encontrado para este ID!"));
+        Aluguel aluguel = aluguelRepository.findById(id).
+                orElseThrow(() -> new ResourceNotFoundException("Nenhum registro encontrado para este ID!"));
 
-        LerAluguelDto lerAluguelDto = DozerMapper.parseObject(aluguel, LerAluguelDto.class);
+        LerAluguelDto lerAluguelDto = new LerAluguelDto();
+        BeanUtils.copyProperties(aluguel, lerAluguelDto);
         return lerAluguelDto;
     }
 
-    public List<LerAluguelDto> retornarTodosAlugueis() {
+    public List<LerAluguelDto> retornarTodosAlugueis () {
 
         logger.info("Finding all rents!");
 
         List<Aluguel> listaAluguel = aluguelRepository.findAll();
-        return DozerMapper.parseListObjects(listaAluguel, LerAluguelDto.class);
+        return listaAluguel.stream()
+                .map(aluguel -> {
+                    LerAluguelDto lerAluguelDto = new LerAluguelDto();
+                    BeanUtils.copyProperties(aluguel, lerAluguelDto);
+                    return lerAluguelDto;
+                })
+                .collect(Collectors.toList());
+
     }
 
-    public void deletarAluguel(Long id) {
+    public void deletarAluguel ( Long id ){
 
         logger.info("Deleting one rent!");
 
         var entity = aluguelRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Nenhum registro encontrado para este ID!"));
         aluguelRepository.delete(entity);
+
     }
+
 }
